# user-management-service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  pytest.ini
.github/workflows/: user-management-ci.yml
alembic/: env.py
alembic/versions/: 404b4d5da71a_add_modified_at_field_to_group.py  f367e55e53e7_initial_migration.py
src/: main.py
src/application/dto/: auth.py  user.py
src/application/usecases/auth/: login_user.py  refresh_token.py  register_user.py  request_password_reset.py  reset_password.py
src/application/usecases/users/: delete_user.py  get_current_user.py  get_user.py  get_user_avatar_info.py  get_users.py  initiate_avatar_upload.py  update_user.py
src/domain/: exceptions.py
src/domain/entities/: __init__.py  group.py  user.py
src/domain/enums/: __init__.py  roles.py
src/domain/interfaces/repositories/: __init__.py  group_repo.py  user_repo.py
src/domain/interfaces/security/: __init__.py  password.py  password_service.py  token.py  token_service.py
src/domain/interfaces/services/: blacklist.py  message_broker.py  storage.py
src/domain/mixins/: __init__.py  timestamp_mixin.py
src/domain/repositories/: __init__.py  group_repository.py  user_repository.py
src/domain/value_objects/: __init__.py  email.py  phone_number.py
src/infrastructure/: __init__.py  config.py
src/infrastructure/brokers/: connection.py  rabbitmq.py
src/infrastructure/db/: __init__.py  redis.py  session.py
src/infrastructure/db/mappers/: __init__.py  base.py  group.py  user.py
src/infrastructure/db/models/: __init__.py  group.py  user.py
src/infrastructure/db/repositories/: __init__.py  group_repo.py  user_repo.py
src/infrastructure/security/: __init__.py  jwt_service.py  password_hasher.py  redis_blacklist.py
src/infrastructure/services/: redis_blacklist.py  s3_service.py
src/infrastructure/terraform/: iam.tf  outputs.tf  s3.tf  terraform.tfvars.example  variables.tf
src/presentation/api/v1/: dependencies.py
src/presentation/api/v1/endpoints/: auth.py  user.py
src/presentation/api/v1/schemas/: __init__.py  auth.py  user.py
tests/: conftest.py
tests/integration/api/: test_auth_endpoints.py  test_user_endpoints.py
tests/integration/repositories/: test_group_repository.py  test_user_repository.py
tests/unit/services/: test_dependencies_and_main.py  test_infrastructure_services.py  test_security_and_domain.py
tests/unit/usecases/: test_auth_usecases.py  test_user_usecases.py
